2007-01-06  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, ptp.c, ptp.h, ptp-private.h, usb.c:

	  Rewrote the USB lowlevel communication layer.
	  Merged  write_func, read_func, check_int and check_int_fast
	  into the ptp_usb_sendreq etc.
	  Split the latter into its own file, usb.c.

2007-01-03  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Get endpoint maxpacketsize from the USB
	  port settings and use it in 0 write detection code.

	* library.c: More MTP mime types (from libmtp folks).

	* library.c: Rewrote the MIME type handling to
	  take vendorextensionid into account. (me)

	* library.c: Various new USB ids out of Ubuntu launchpad
	  bugreports.
		Canon PowerShot SD40
		Kodak EasyShare C433
		Kodak EasyShare V705
		Casio EX-Z700

2007-01-02  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Report storage information 
	  dynamically using the new API.

	* ptp.c,ptp.h: From libmtp folks:
	  Renamed some defines of MTP commands.

2006-12-30  Marcus Meissner  <marcus@jet.franken.de>

	* library.c,ptp-bugs.h: Mark up MTP devices
	  known to support MTP GetObjectPropertyList
	  correctly. Do not call it for others.

	From libmtp developers:
	2006-12-30  Orson Teodoro <orsonteodoro@yahoo.com>
	* ptp.c,ptp.h: Lots of new MTP defines and
	  debug output.

	2006-12-29  Richard Low <richard@wentnet.com>
	* ptp-pack.c: Fixed bugs in ObjectInfo packing
	  magic.
	
	* library.c: Added Philips SA9200.

2006-12-29  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Kodak C875, HP Photosmart R967.
	* config.c: Report battery level (read-only)

2006-12-28  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, ptp.h, ptp.c, ptpip.c:

	  Rewrote the whole data flow handling to allow streaming of
	  data from and to PTP devices without taking up memory.

	  Introduced generic PTPDataHandler with get and putfunctions. 

2006-12-21  Marcus Meissner  <marcus@jet.franken.de>

	* Added Kodak V570 as reported.